--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- Hero Section -->
   <section class="flex flex-col md:flex-row items-center justify-between p-8 max-w-6xl mx-auto">
-    <img src="logoNontonApa.png" alt="Film" class="w-32 h-32 md:w-48 md:h-48 object-contain rounded-lg shadow-md mb-6 md:mb-0">
+    <img src="logoNontonApa.png" alt="Film" class="w-32 h-32 md:w-48 md:h-48 object-contain rounded-lg mb-6 md:mb-0">
     <div class="md:ml-8">
       <h2 class="text-2xl font-semibold mb-4">Temukan film favoritmu!</h2>
       <p class="mb-6">Butuh rekomendasi film untuk malam minggu? NontonApa hadir untuk memberikan daftar film terbaik dari berbagai genre!</p>
